Remove incorrectly capitalized Gemfile and ignore Gemfile.lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 target
 .idea
-.project
-.settings
-.classpath
 *.iml
 *.log
 *.ipr
 *.iws
 *.ids
-logs
-appserver
-release.properties
 .DS_Store
-.springBeans
+dependency.cache
+reports
+Gemfile.lock
