Let's try to setup a mysql user on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ jdK:
   - oraclejdk7
 
 before_script:
-  - mysql -e 'create database petstore_test;'
+  - mysql -e "create database petstore_test;"
+  - mysql -e "create user 'testbot'@'localhost' identified by 'petstore'";
+  - mysql -e "grant all on petstore_test.* to 'testbot'@'localhost'";
 
 script: bundle exec buildr clean install
