--- a/persistence/src/test/resources/database.properties
+++ b/persistence/src/test/resources/database.properties
@@ -1,3 +1,3 @@
 jdbc.url: jdbc:mysql://localhost:3306/petstore_test?generateSimpleParameterMetadata=true
-jdbc.username: root
-jdbc.password:
+jdbc.username: testbot
+jdbc.password: petstore
