--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: ruby
 rvm:
   - 1.8.7
+  - jruby-18mode # JRuby in 1.8 mode
 
 jdK:
   - oraclejdk7
-  - oraclejdk6
 
 before_script:
   - mysql -e "create database petstore_test;"
