--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ rvm:
   - 1.8.7
   - jruby-18mode # JRuby in 1.8 mode
 
-jdK:
+jdk:
   - oraclejdk7
+  - oraclejdk6
 
 before_script:
   - mysql -e "create database petstore_test;"
