We now validate that card number have the correct form depending on the card type
--HG--
rename : domain/src/main/java/org/testinfected/petstore/validation/NotBlank.java => domain/src/main/java/org/testinfected/petstore/validation/NotEmpty.java

--- a/webapp/src/main/resources/ValidationMessages.properties
+++ b/webapp/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,3 @@
 invalid.paymentDetails: Please correct the following errors\:
-blank.paymentDetails.cardNumber: card number may not be blank
+empty.paymentDetails.cardNumber: may not be empty
+incorrect.paymentDetails.cardNumber: not a valid number
