Update to latest webdriver (2.37) to support latest Firefox (24) and phantomJS (1.9.x)

--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -6,6 +6,7 @@ browser.driver: firefox
 browser.capability.javascriptEnabled: true
 # PhantomJS installed with homebrew on OSX
 browser.capability.phantomjs.binary.path: /usr/local/bin/phantomjs
+browser.capability.phantomjs.cli.args: [--webdriver-loglevel=OFF]
 
 ## Run against selenium server by using:
 #browser.driver: remote
