--- a/build.yaml
+++ b/build.yaml
@@ -18,19 +18,19 @@ artifacts:
   hamcrest_library: org.hamcrest:hamcrest-library:jar:1.3
   hamcrest_extra: org.testinfected.hamcrest-matchers:core-matchers:jar:1.5
   antlr_runtime: org.antlr:antlr-runtime:jar:3.0.1
-  guava: com.google.collections:google-collections:jar:1.0-rc2
+  guava: com.google.guava:guava:jar:15.0
   cssselectors: com.3levers.cssselectors:cssselectors:jar:1.0
   hamcrest_dom: org.testinfected.hamcrest-matchers:dom-matchers:jar:1.5
   selenium_firefox_driver: org.seleniumhq.selenium:selenium-firefox-driver:jar:2.37.0
   selenium_ghost_driver: com.github.detro.ghostdriver:phantomjsdriver:jar:1.0.4
   windowlicker_web: com.googlecode.windowlicker:windowlicker-web:jar:r268
   juniversalchardet: com.googlecode.juniversalchardet:juniversalchardet:jar:1.0.3
-  nekohtml: net.sourceforge.nekohtml:nekohtml:jar:1.9.15
+  nekohtml: net.sourceforge.nekohtml:nekohtml:jar:1.9.20
   jmock_legacy: org.jmock:jmock-legacy:jar:2.6.0
   jcl_over_slf4j: org.slf4j:jcl-over-slf4j:jar:1.5.6
   slf4j_api: org.slf4j:slf4j-api:jar:1.5.6
   slf4j_silent: org.slf4j:slf4j-nop:jar:1.5.6
-  htmlunit: net.sourceforge.htmlunit:htmlunit:jar:2.13
+  htmlunit: net.sourceforge.htmlunit:htmlunit:jar:2.14
 
 junit: 4.11
 jmock: 2.6.0
