Damn it's gettin late. It won't work on travis without a database

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,8 @@ language: java
 jdk:
   - oraclejdk7
   - openjdk7
+
+before_script:
+  - mysql -e "create database petstore_test;"
+  - mysql -e "create user 'testbot'@'localhost' identified by 'petstore'";
+  - mysql -u root -e "grant all on petstore_test.* to 'testbot'@'localhost'";
