--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ jdk:
   - oraclejdk7
   - openjdk7
 
+env:
+  - TERM=dumb
+
 before_script:
   - mysql -e "create database petstore_test;"
   - mysql -e "create user 'testbot'@'localhost' identified by 'petstore'";
