Let's see if we can get coveralls reports

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ before_script:
   - mysql -e "create database petstore_test;"
   - mysql -e "create user 'testbot'@'localhost' identified by 'petstore'";
   - mysql -u root -e "grant all on petstore_test.* to 'testbot'@'localhost'";
+
+after_success:
+  - gradle coverage coveralls
