--- a/build.gradle
+++ b/build.gradle
@@ -90,12 +90,12 @@ task coverage(type: JacocoReport) {
     reports {
         xml {
             enabled true
-            destination "build/reports/jacoco"
+            destination "build/reports/jacoco/test"
         }
 
         html {
             enabled true
-            destination "build/reports/jacoco"
+            destination "build/reports/jacoco/test/html"
         }
     }
 }
