--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ subprojects {
 
 apply plugin: 'coveralls'
 
+// Add source classes from all subprojects for coveralls plugin to work
+sourceSets.main.java.srcDirs = subprojects.collect{ it.sourceSets.main.java.srcDirs }.flatten()
+
 configurations {
     jacoco
 }
@@ -76,7 +79,6 @@ configurations {
 dependencies {
     jacoco 'org.jacoco:org.jacoco.ant:0.7.0.201403182114'
 }
-
 
 task coverage(type: JacocoReport) {
     jacocoClasspath = configurations.jacoco
