Enhance builds to support all cli options and rename webapp root folder to 'content'
--HG--
rename : webapp/src/main/webapp/public/favicon.ico => webapp/src/main/content/public/favicon.ico
rename : webapp/src/main/webapp/public/images/bg.png => webapp/src/main/content/public/images/bg.png
rename : webapp/src/main/webapp/public/images/github.png => webapp/src/main/content/public/images/github.png
rename : webapp/src/main/webapp/public/images/logo.png => webapp/src/main/content/public/images/logo.png
rename : webapp/src/main/webapp/public/images/magnifier.png => webapp/src/main/content/public/images/magnifier.png
rename : webapp/src/main/webapp/public/images/tab.png => webapp/src/main/content/public/images/tab.png
rename : webapp/src/main/webapp/public/photos/beagle.jpg => webapp/src/main/content/public/photos/beagle.jpg
rename : webapp/src/main/webapp/public/photos/bulldog.jpg => webapp/src/main/content/public/photos/bulldog.jpg
rename : webapp/src/main/webapp/public/photos/dalmatian.jpg => webapp/src/main/content/public/photos/dalmatian.jpg
rename : webapp/src/main/webapp/public/photos/dog.png => webapp/src/main/content/public/photos/dog.png
rename : webapp/src/main/webapp/public/photos/golden.jpg => webapp/src/main/content/public/photos/golden.jpg
rename : webapp/src/main/webapp/public/photos/golden_retriever.jpg => webapp/src/main/content/public/photos/golden_retriever.jpg
rename : webapp/src/main/webapp/public/photos/husky.jpg => webapp/src/main/content/public/photos/husky.jpg
rename : webapp/src/main/webapp/public/photos/iguana.png => webapp/src/main/content/public/photos/iguana.png
rename : webapp/src/main/webapp/public/photos/labrador.jpg => webapp/src/main/content/public/photos/labrador.jpg
rename : webapp/src/main/webapp/public/photos/missing.png => webapp/src/main/content/public/photos/missing.png
rename : webapp/src/main/webapp/public/photos/poodle.jpg => webapp/src/main/content/public/photos/poodle.jpg
rename : webapp/src/main/webapp/public/stylesheets/pe

--- a/build.gradle
+++ b/build.gradle
@@ -96,10 +96,19 @@ if (!project.hasProperty('env')) {
 run {
   classpath = project(':server').sourceSets.main.runtimeClasspath
   args '-e', env
+  if (project.hasProperty('host')) {
+    args '-h', host
+  }
   if (project.hasProperty('port')) {
     args '-p', port
   }
-  args project(':webapp').file('src/main/webapp')
+    if (project.hasProperty('timeout')) {
+        args '--timeout', timeout
+    }
+  if (project.hasProperty('quiet')) {
+      args '-q'
+  }
+  args project(':webapp').file('src/main/content')
 }
 
 task 'db-init'(type: JavaExec) {
