--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ ext {
   libs = [
           mysql             : 'mysql:mysql-connector-java:5.1.21',
           flyway            : 'com.googlecode.flyway:flyway-core:2.0',
-          cli               : 'com.vtence.cli:cli:1.1-SNAPSHOT',
+          cli               : 'com.vtence.cli:cli:1.1',
           simple            : 'org.simpleframework:simple:5.1.6',
           jmustache         : 'com.samskivert:jmustache:1.9',
 
