--- a/build.yaml
+++ b/build.yaml
@@ -6,7 +6,7 @@ repositories:
     - http://repo1.maven.org/maven2
 
 artifacts:
-  cli: org.testinfected:cli:jar:1.0
+  cli: com.vtence.cli:cli:jar:1.1
   simpleweb: org.simpleframework:simple:jar:5.1.4
   jmustache: com.samskivert:jmustache:jar:1.7
 
