Add details on how to run the end-to-end tests using PhantomJS

--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -1,14 +1,17 @@
+# Fire the application on the following port:
 server.port: 8808
 
-browser.driver: firefox
+#Select the driver to use for running the tests (PhantomJS, Firefox or Selenium Grid)
 #browser.driver: phantomjs
-
-browser.capability.javascriptEnabled: true
-# PhantomJS installed with homebrew on OSX
-browser.capability.phantomjs.binary.path: /usr/local/bin/phantomjs
-browser.capability.phantomjs.cli.args: [--webdriver-loglevel=OFF]
-
-## Run against selenium server by using:
+browser.driver: firefox
+#Run against selenium server by using:
 #browser.driver: remote
 #browser.remote.url: http://127.0.0.1:4444/wd/hub
 #browser.capability.browserName: firefox
+
+#Path to the PhantomJS executable (leave blank if it's on your system PATH)
+browser.capability.phantomjs.binary.path: /usr/local/bin/phantomjs
+browser.capability.phantomjs.cli.args: [--webdriver-loglevel=OFF]
+
+#Add whatever browser capability you like using prefix browser.capability., e.g.:
+browser.capability.javascriptEnabled: true
