Rework end-to-end tests around actor roles and their respective activities

--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -3,7 +3,7 @@ server.port: 8808
 
 #Select the driver to use for running the tests (PhantomJS, Firefox or Selenium Grid)
 #browser.driver: phantomjs
-browser.driver: firefox
+browser.driver: phantomjs
 #Run against selenium server by using:
 #browser.driver: remote
 #browser.remote.url: http://127.0.0.1:4444/wd/hub
@@ -11,7 +11,7 @@ browser.driver: firefox
 
 #Path to the PhantomJS executable (leave blank if it's on your system PATH)
 browser.capability.phantomjs.binary.path: /usr/local/bin/phantomjs
-browser.capability.phantomjs.cli.args: [--webdriver-loglevel=OFF]
+browser.capability.phantomjs.cli.args: [--webdriver-loglevel=NONE]
 
 #Add whatever browser capability you like using prefix browser.capability., e.g.:
 browser.capability.javascriptEnabled: true
