--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,9 @@ ext {
             selenium_api      : 'org.seleniumhq.selenium:selenium-api:2.47.1',
             selenium_remote   : 'org.seleniumhq.selenium:selenium-remote-driver:2.47.1',
             selenium_firefox  : 'org.seleniumhq.selenium:selenium-firefox-driver:2.47.1',
-            selenium_phantom  : 'com.github.detro.ghostdriver:phantomjsdriver:1.1.0',
-            windowlicker      : 'com.googlecode.windowlicker:windowlicker-web:r268',
+            selenium_phantom  : 'com.codeborne:phantomjsdriver:1.2.1',
+            windowlicker      : ['com.googlecode.windowlicker:windowlicker-core:r268',
+                                 'com.googlecode.windowlicker:windowlicker-web:r268@jar'],
             nolog             : ['org.slf4j:slf4j-api:1.5.6',
                                  'org.slf4j:jcl-over-slf4j:1.5.6',
                                  'org.slf4j:slf4j-nop:1.5.6']
