We need this dependency for webapp tests to run since we're using tape

--- a/webapp/build.gradle
+++ b/webapp/build.gradle
@@ -16,6 +16,7 @@ dependencies {
   testRuntime libs.juniversal_chardet
   testRuntime libs.simple
   testRuntime libs.mysql
+  testRuntime libs.tape
 }
 
 test {
