--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,12 +7,15 @@ dependencies {
     compile libs.flyway
     compile libs.tape
 
+    runtime libs.jmustache
     runtime libs.simple
     runtime libs.mysql
 
+    testCompile project(':domain').sourceSets.test.output
+    testCompile project(':persistence').sourceSets.test.output
     testCompile project(':webapp').sourceSets.test.output
     testCompile libs.molecule_test
-    testCompile libs.jmustache
+    testRuntime libs.juniversal_chardet
     testCompile libs.nekohtml
     testCompile libs.selenium_api
     testCompile libs.selenium_firefox
