Upgrade to hamcrest dom matchers 1.8

--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,8 @@ ext {
             hamcrest          : ['org.hamcrest:hamcrest-core:1.3@jar',
                                  'org.hamcrest:hamcrest-library:1.3@jar'],
             hamcrest_extra    : 'org.testinfected.hamcrest-matchers:core-matchers:1.5@jar',
-            hamcrest_dom      : ['com.google.guava:guava:15.0',
-                                 'org.antlr:antlr-runtime:3.0.1',
-                                 'com.3levers.cssselectors:cssselectors:1.0@jar',
-                                 'org.testinfected.hamcrest-matchers:dom-matchers:1.5@jar'],
+            hamcrest_dom      : ['se.fishtank:css-selectors:1.0.5',
+                                 'org.testinfected.hamcrest-matchers:dom-matchers:1.8@jar'],
             junit             : 'junit:junit:4.11@jar',
             jmock             : ['org.jmock:jmock:2.6.0@jar',
                                  'org.jmock:jmock-junit4:2.6.0@jar',
