--- a/build.yaml
+++ b/build.yaml
@@ -21,10 +21,8 @@ artifacts:
   hamcrest_core: org.hamcrest:hamcrest-core:jar:1.3
   hamcrest_library: org.hamcrest:hamcrest-library:jar:1.3
   hamcrest_extra: org.testinfected.hamcrest-matchers:core-matchers:jar:1.5
-  antlr_runtime: org.antlr:antlr-runtime:jar:3.0.1
-  guava: com.google.guava:guava:jar:15.0
-  cssselectors: com.3levers.cssselectors:cssselectors:jar:1.0
-  hamcrest_dom: org.testinfected.hamcrest-matchers:dom-matchers:jar:1.5
+  cssselectors: se.fishtank:css-selectors:1.0.5
+  hamcrest_dom: org.testinfected.hamcrest-matchers:dom-matchers:jar:1.8
   molecule_test: com.vtence.molecule:molecule:jar:tests:0.10
   selenium_firefox_driver: org.seleniumhq.selenium:selenium-firefox-driver:jar:2.41.0
   selenium_ghost_driver: com.github.detro.ghostdriver:phantomjsdriver:jar:1.1.0
