--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,10 @@ ext {
                                  'org.objenesis:objenesis:1.0'],
             juniversal_chardet: 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3',
             nekohtml          : 'net.sourceforge.nekohtml:nekohtml:1.9.20',
-            selenium_api      : 'org.seleniumhq.selenium:selenium-api:2.47.1',
-            selenium_remote   : 'org.seleniumhq.selenium:selenium-remote-driver:2.47.1',
-            selenium_firefox  : 'org.seleniumhq.selenium:selenium-firefox-driver:2.47.1',
-            selenium_phantom  : 'com.codeborne:phantomjsdriver:1.2.1',
-            windowlicker      : ['com.googlecode.windowlicker:windowlicker-core:r268',
-                                 'com.googlecode.windowlicker:windowlicker-web:r268@jar'],
+            selenium_api      : 'org.seleniumhq.selenium:selenium-api:2.53.0',
+            selenium_firefox  : 'org.seleniumhq.selenium:selenium-firefox-driver:2.53.0',
+            mario             : 'com.vtence.mario:mario:0.1',
+            selenium_phantom  : 'com.codeborne:phantomjsdriver:1.3.0',
             nolog             : ['org.slf4j:slf4j-api:1.5.6',
                                  'org.slf4j:jcl-over-slf4j:1.5.6',
                                  'org.slf4j:slf4j-nop:1.5.6']
