Simplify handling of prod/test environment properties

--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -15,3 +15,8 @@ browser.capability.phantomjs.cli.args: [--webdriver-loglevel=NONE]
 
 #Add whatever browser capability you like using prefix browser.capability., e.g.:
 browser.capability.javascriptEnabled: true
+
+# How long should we wait for web conditions to be true before giving up
+poll.timeout = 2000
+# How long should we pause in between web checks
+poll.delay = 50
